# generator-mavlink-plan

./: .gitignore  230927-example-EVLOS Landside F8.plan  Cargo.toml  LICENSE  README.md  compile.20.04.Dockerfile  compile.22.04.Dockerfile  compile.Dockerfile  docker-compose.yaml  flight-route-planner.desktop
resources/: install.sh  uninstall.sh
src/: dataStructs.rs  data_structs.rs  main.rs
src/astar_planner/: builder.rs  mod.rs  planning_waypoints.rs
src/mav_link_plan/: mod.rs
