[package]
name = "generator-mavlink-plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
iced_native = "0.10.3"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
reqwest = { version = "0.11", features = ["json", "blocking"] }
notify-rust = "4.9.0"
geo = "0.26.0"
geo-types = { version = "0.7.9", features = ["serde"]}
proj = "0.27.2"
geographiclib-rs = "0.2.3"
