[package]
name = "generator-mavlink-plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10"
iced_native = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
notify-rust = "4.9"
geo = "0.26"
geo-types = { version = "0.7", features = ["serde"]}
# proj 0.25 for Proj 8.2 on Ubuntu 22.04
#proj = "0.25"
# proj 0.14 for Proj 6.3 on Ubuntu 20.04
#proj = "0.14"
geographiclib-rs = "0.2"
dubins_paths = "2.1"
